--- a/GameData/OuterParallax/MPE/_Configs/IncreaseSubdivisionCount_C.cfg
+++ b/GameData/OuterParallax/MPE/_Configs/IncreaseSubdivisionCount_C.cfg
@@ -9,7 +9,7 @@
 			{
 				Parallax
 				{
-					subdivisionLevel = 7
+					subdivisionLevel = 4
 					subdivisionRadius = 900
 					order = 999999
 				}
@@ -51,7 +51,7 @@
 			{
 				Parallax
 				{
-					subdivisionLevel = 7
+					subdivisionLevel = 8
 					subdivisionRadius = 1400
 					order = 999999
 				}
@@ -114,7 +114,7 @@
 			{
 				Parallax
 				{
-					subdivisionLevel = 16
+					subdivisionLevel = 8
 					subdivisionRadius = 10
 					order = 999999
 				}
@@ -288,6 +288,11 @@
 				}
 			}
 		}
+		%Debug
+        {
+            %exportMesh = True
+            %update = True
+        }
     }
     @Body[Lon]
     {
