--- a/GameData/OuterParallax/MPE/_Scatters/Edas.cfg
+++ b/GameData/OuterParallax/MPE/_Scatters/Edas.cfg
@@ -1,4 +1,4 @@
-ParallaxScatters
+ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 {
 	Body
 	{
@@ -13,7 +13,9 @@ ParallaxScatters
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -49,17 +51,17 @@ ParallaxScatters
 			Distribution
 			{
 				seed = 0.300000012
-				spawnChance = 1
+				spawnChance = 0.75
 				range = 150
-				populationMultiplier = 7
+				populationMultiplier = 8
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
 				cutoffScale = 0.0500000007
-				steepPower = 3
+				steepPower = 9.99999975E-05
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.30000037
+				maxNormalDeviance = 0.300000757
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -95,7 +97,9 @@ ParallaxScatters
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -131,17 +135,17 @@ ParallaxScatters
 			Distribution
 			{
 				seed = 3.29999995
-				spawnChance = 1
+				spawnChance = 0.75
 				range = 650
-				populationMultiplier = 2
+				populationMultiplier = 4
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
 				cutoffScale = 0.0700000003
-				steepPower = 3
+				steepPower = 9.99999975E-05
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.160000309
+				maxNormalDeviance = 0.160000622
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -177,7 +181,9 @@ ParallaxScatters
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -213,17 +219,17 @@ ParallaxScatters
 			Distribution
 			{
 				seed = 7
-				spawnChance = 0.5
+				spawnChance = 0.649999976
 				range = 2000
-				populationMultiplier = 4
+				populationMultiplier = 6
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.5,0.5,0.5
 				scaleRandomness = 0.5
 				cutoffScale = 0.639999986
-				steepPower = 3
+				steepPower = 9.99999975E-05
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.130000278
+				maxNormalDeviance = 0.130000547
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -259,7 +265,9 @@ ParallaxScatters
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -295,17 +303,17 @@ ParallaxScatters
 			Distribution
 			{
 				seed = 10
-				spawnChance = 0.300000012
+				spawnChance = 0.400000006
 				range = 2000
 				populationMultiplier = 3
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.400000006,0.400000006,0.400000006
 				scaleRandomness = 0.5
 				cutoffScale = 0.639999986
-				steepPower = 3
+				steepPower = 9.99999975E-05
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.130000278
+				maxNormalDeviance = 0.130000547
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
