--- a/GameData/OuterParallax/OPM/_Scatters/Slate.cfg
+++ b/GameData/OuterParallax/OPM/_Scatters/Slate.cfg
@@ -1,4 +1,4 @@
-ParallaxScatters
+ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 {
 	Body
 	{
@@ -101,7 +101,7 @@ ParallaxScatters
 		Scatter
 		{
 			name = SmallRocksVar2
-			model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod0
+			model = Parallax_StockScatterTextures/Models/Dres/smallvar2lod0
 			collisionLevel = 1
 			Optimizations
 			{
@@ -163,7 +163,7 @@ ParallaxScatters
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod1
+						model = Parallax_StockScatterTextures/Models/Dres/smallvar2lod1
 						range = 15
 						MaterialOverride
 						{
@@ -171,7 +171,7 @@ ParallaxScatters
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod2
+						model = Parallax_StockScatterTextures/Models/Dres/smallvar2lod2
 						range = 30
 						MaterialOverride
 						{
@@ -289,7 +289,7 @@ ParallaxScatters
 		Scatter
 		{
 			name = MedRocksVar2
-			model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod0
+			model = Parallax_StockScatterTextures/Models/Dres/medvar2lod0
 			collisionLevel = 2
 			Optimizations
 			{
@@ -351,7 +351,7 @@ ParallaxScatters
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod1
+						model = Parallax_StockScatterTextures/Models/Dres/medvar2lod1
 						range = 40
 						MaterialOverride
 						{
@@ -359,7 +359,7 @@ ParallaxScatters
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod2
+						model = Parallax_StockScatterTextures/Models/Dres/medvar2lod2
 						range = 100
 						MaterialOverride
 						{
@@ -383,7 +383,7 @@ ParallaxScatters
 		Scatter
 		{
 			name = MedRocksVar3
-			model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod0
+			model = Parallax_StockScatterTextures/Models/Dres/medvar3lod0
 			collisionLevel = 2
 			Optimizations
 			{
@@ -445,7 +445,7 @@ ParallaxScatters
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod1
+						model = Parallax_StockScatterTextures/Models/Dres/medvar3lod1
 						range = 60.0000038
 						MaterialOverride
 						{
@@ -453,7 +453,7 @@ ParallaxScatters
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod2
+						model = Parallax_StockScatterTextures/Models/Dres/medvar3lod2
 						range = 120.000008
 						MaterialOverride
 						{
@@ -571,7 +571,7 @@ ParallaxScatters
 		Scatter
 		{
 			name = LargeRocksVar2
-			model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod0
+			model = Parallax_StockScatterTextures/Models/Dres/largevar2lod0
 			collisionLevel = 3
 			Optimizations
 			{
@@ -633,7 +633,7 @@ ParallaxScatters
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod1
+						model = Parallax_StockScatterTextures/Models/Dres/largevar2lod1
 						range = 120
 						MaterialOverride
 						{
@@ -641,7 +641,7 @@ ParallaxScatters
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod2
+						model = Parallax_StockScatterTextures/Models/Dres/largevar2lod2
 						range = 240
 						MaterialOverride
 						{
@@ -857,7 +857,9 @@ ParallaxScatters
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -893,17 +895,17 @@ ParallaxScatters
 			Distribution
 			{
 				seed = 9
-				spawnChance = 1
+				spawnChance = 0.649999976
 				range = 2000
-				populationMultiplier = 6
+				populationMultiplier = 3
 				minScale = 6,6,6
 				maxScale = 17,17,17
 				scaleRandomness = 0.5
 				cutoffScale = 0.5
-				steepPower = 2
+				steepPower = 4
 				steepContrast = 1
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.720000471
+				maxNormalDeviance = 0.418408364
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -1136,7 +1138,9 @@ ParallaxScatters
 			{
 				frustumCullingStartRange = 200.000015
 				frustumCullingScreenMargin = -400
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -1182,9 +1186,9 @@ ParallaxScatters
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.700000358
+				maxNormalDeviance = 0.700000584
 				minAltitude = -1000
-				maxAltitude = 4600
+				maxAltitude = 16600
 				altitudeFadeRange = 10
 				alignToTerrainNormal = False
 				coloredByTerrain = False
@@ -1230,7 +1234,9 @@ ParallaxScatters
 			{
 				frustumCullingStartRange = 200.000015
 				frustumCullingScreenMargin = -400
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -1276,9 +1282,9 @@ ParallaxScatters
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.700000358
+				maxNormalDeviance = 0.700000584
 				minAltitude = -1000
-				maxAltitude = 4600
+				maxAltitude = 16600
 				altitudeFadeRange = 10
 				alignToTerrainNormal = False
 				coloredByTerrain = False
@@ -1324,7 +1330,9 @@ ParallaxScatters
 			{
 				frustumCullingStartRange = 200.000015
 				frustumCullingScreenMargin = -400
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -1370,9 +1378,9 @@ ParallaxScatters
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.700000358
+				maxNormalDeviance = 0.700000584
 				minAltitude = -1000
-				maxAltitude = 4600
+				maxAltitude = 16600
 				altitudeFadeRange = 10
 				alignToTerrainNormal = False
 				coloredByTerrain = False
